<resources>
  <string name="app_name">Food Fail</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="landing_header">Food Fail</string>
  <string name="landing_body">Find the inspection history of any facility that handles food!</string>
  <string name="title_local">Local Facilities</string>
  <string name="title_search">Search for Facilities</string>
  <string name="title_landing">Home</string>
  <string name="facility_detail">Facility</string>
  <string name="search">Search</string>
  <string name="food_fail_menu">Food Fail Menu</string>
  <string name="food_fail_email">foodfail.abq@mweslacey.com</string>
  <string name="inspection_date_label">Inspection Date</string>
  <string name="result_label">Result</string>
  <string name="violation_description_label">Violation Description</string>
  <string name="inspection_memorandum_label">Inspection Memorandum</string>
  <string name="violation_code_label">Violation Code</string>
  <string name="geo_request_failure">The request to Google\'s Geocode API has failed</string>
  <string name="location_exception">Attempt to retrieve your current location has failed.</string>
  <string name="reverse_request_failure">Location postal code lookup failed.</string>
  <string name="permission_explanation">Food Fail needs your location to find nearby facilities.</string>

</resources>
